--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "google-spreadsheet": "^3.1.15",
-    "googleapis": "^39.2.0"
+    "googleapis": "^39.2.0",
+    "luxon": "^1.26.0"
   }
 }
